--- a/www/seamonkey/Makefile
+++ b/www/seamonkey/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.37 2010/06/25 07:34:26 tnn Exp $
+# $NetBSD: Makefile,v 1.37.2.1 2010/07/22 14:31:30 tron Exp $
 #
 
 DISTNAME=	seamonkey-${SM_VER}.source
 PKGNAME=	seamonkey-${SM_VER}
-SM_VER=		2.0.5
+SM_VER=		2.0.6
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_MOZILLA:=seamonkey/releases/${SM_VER}/source/}
 EXTRACT_SUFX=	.tar.bz2
