--- a/mail/squirrelmail/Makefile
+++ b/mail/squirrelmail/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.114 2010/03/07 03:41:49 taca Exp $
+# $NetBSD: Makefile,v 1.114.4.1 2010/07/25 11:41:03 spz Exp $
 
-DISTNAME=	squirrelmail-1.4.20
+DISTNAME=	squirrelmail-1.4.21
 CATEGORIES=	mail www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=squirrelmail/}
 EXTRACT_SUFX=	.tar.bz2
