--- a/converters/php-mbstring/Makefile
+++ b/converters/php-mbstring/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2010/03/16 15:03:42 taca Exp $
+# $NetBSD: Makefile,v 1.1.1.1.4.1 2010/07/25 11:56:16 spz Exp $
 
 MODNAME=		mbstring
-PKGREVISION=		1
 CATEGORIES+=		converters
 COMMENT=		PHP extension for multibyte characters support
 
