--- a/devel/php-gmp/Makefile
+++ b/devel/php-gmp/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2010/03/24 19:43:23 asau Exp $
+# $NetBSD: Makefile,v 1.11.4.1 2010/07/25 11:56:16 spz Exp $
 
 MODNAME=		gmp
-PKGREVISION=		1
 CATEGORIES+=		devel math
 COMMENT=		PHP extension for arbitrary precision math
 
