--- a/graphics/php-gd/Makefile
+++ b/graphics/php-gd/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2010/06/13 22:44:41 wiz Exp $
+# $NetBSD: Makefile,v 1.23.2.1 2010/07/25 11:56:16 spz Exp $
 
 MODNAME=		gd
-PKGREVISION=		1
 CATEGORIES+=		graphics
 COMMENT=		PHP extension for GD graphics library
 
