--- a/multimedia/php-ming/Makefile
+++ b/multimedia/php-ming/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2010/06/13 22:45:06 wiz Exp $
+# $NetBSD: Makefile,v 1.10.2.1 2010/07/25 11:56:17 spz Exp $
 
 MODNAME=		ming
-PKGREVISION=		2
 CATEGORIES+=		multimedia
 
 MAINTAINER=		obache@NetBSD.org
