--- a/print/php-pdflib/Makefile
+++ b/print/php-pdflib/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2010/06/13 22:45:16 wiz Exp $
+# $NetBSD: Makefile,v 1.16.2.1 2010/07/25 11:56:18 spz Exp $
 
 MODNAME=		pdflib
 PKGMODNAME=		pdf
-PKGREVISION=		1
 PECL_VERSION=		2.1.8
 CATEGORIES+=		print
 COMMENT=		PHP extension for PDFlib on-the-fly PDF generation
