--- a/www/py-paste/Makefile
+++ b/www/py-paste/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2009/11/10 17:08:24 epg Exp $
+# $NetBSD: Makefile,v 1.6.6.1 2010/07/27 18:07:43 tron Exp $
 
-DISTNAME=	Paste-1.7.2
+DISTNAME=	Paste-1.7.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www
 MASTER_SITES=	http://pypi.python.org/packages/source/P/Paste/
@@ -8,6 +8,7 @@ MASTER_SITES=	http://pypi.python.org/packages/source/P/Paste/
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://pythonpaste.org/
 COMMENT=	Middleware for Python WSGI applications
+LICENSE=	mit
 
 PKG_DESTDIR_SUPPORT=		user-destdir
 
